Java version changed, added the APTED library version 0.2 and performed some code style optimizations.