@@ -9,7 +9,10 @@ import artie.pedagogicalintervention.webservice.service.DistanceCalculationServi
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
@@ -43,8 +46,8 @@ public class PedagogicalSoftwareServiceNextStepTest {
         NextStepHint nextSteps = null;
 
         //A- Same origin and aim comparison
-        originElements = new ArrayList<PedagogicalSoftwareBlockDTO>(Arrays.asList(origin1, origin2, origin3));
-        aimElements = new ArrayList<PedagogicalSoftwareBlockDTO>(Arrays.asList(aim1, aim2, aim3));
+        originElements = new ArrayList<>(List.of(origin1, origin2, origin3));
+        aimElements = new ArrayList<>(List.of(aim1, aim2, aim3));
         mapFamilySimilarities = new HashMap<>();
         mapFamilyDifferences = new HashMap<>();
         nextSteps = new NextStepHint();
@@ -56,8 +59,8 @@ public class PedagogicalSoftwareServiceNextStepTest {
         assertEquals(0, nextSteps.getReplaceInputs().size());
 
         //B- More in origin
-        originElements = new ArrayList<PedagogicalSoftwareBlockDTO>(Arrays.asList(origin1, origin2, origin3));
-        aimElements = new ArrayList<PedagogicalSoftwareBlockDTO>(Arrays.asList(aim1, aim2));
+        originElements = new ArrayList<>(List.of(origin1, origin2, origin3));
+        aimElements = new ArrayList<>(List.of(aim1, aim2));
         mapFamilySimilarities = new HashMap<>();
         mapFamilyDifferences = new HashMap<>();
         nextSteps = new NextStepHint();
@@ -72,8 +75,8 @@ public class PedagogicalSoftwareServiceNextStepTest {
 
 
         //C- More in aim comparison
-        originElements = new ArrayList<PedagogicalSoftwareBlockDTO>(Arrays.asList(origin1, origin2));
-        aimElements = new ArrayList<PedagogicalSoftwareBlockDTO>(Arrays.asList(aim1, aim2, aim3));
+        originElements = new ArrayList<>(List.of(origin1, origin2));
+        aimElements = new ArrayList<>(List.of(aim1, aim2, aim3));
         mapFamilySimilarities = new HashMap<>();
         mapFamilyDifferences = new HashMap<>();
         nextSteps = new NextStepHint();
@@ -87,8 +90,8 @@ public class PedagogicalSoftwareServiceNextStepTest {
         assertEquals("element3", nextSteps.getAddBlocks().get(0).getBlockName());
 
         //D- Difference in origin and in aim
-        originElements = new ArrayList<PedagogicalSoftwareBlockDTO>(Arrays.asList(origin1, origin2, origin4));
-        aimElements = new ArrayList<PedagogicalSoftwareBlockDTO>(Arrays.asList(aim1, aim2, aim5));
+        originElements = new ArrayList<>(List.of(origin1, origin2, origin4));
+        aimElements = new ArrayList<>(List.of(aim1, aim2, aim5));
         mapFamilySimilarities = new HashMap<>();
         mapFamilyDifferences = new HashMap<>();
         nextSteps = new NextStepHint();
@@ -104,8 +107,8 @@ public class PedagogicalSoftwareServiceNextStepTest {
 
 
         //E- Difference in origin and in aim, but more (one element repeated) in origin
-        originElements = new ArrayList<PedagogicalSoftwareBlockDTO>(Arrays.asList(origin1, origin2, origin4, origin4));
-        aimElements = new ArrayList<PedagogicalSoftwareBlockDTO>(Arrays.asList(aim1, aim2, aim5));
+        originElements = new ArrayList<>(List.of(origin1, origin2, origin4, origin4));
+        aimElements = new ArrayList<>(List.of(aim1, aim2, aim5));
         mapFamilySimilarities = new HashMap<>();
         mapFamilyDifferences = new HashMap<>();
         nextSteps = new NextStepHint();
@@ -144,8 +147,8 @@ public class PedagogicalSoftwareServiceNextStepTest {
 
 
         //A- Same origin and aim comparison
-        mapFamilySimilarities.put("family1", new ArrayList<PedagogicalSoftwareBlockDTO>(Arrays.asList(origin1, origin2, origin3)));
-        aimElements = new ArrayList<PedagogicalSoftwareBlockDTO>(Arrays.asList(aim1, aim2, aim3));
+        mapFamilySimilarities.put("family1", new ArrayList<>(List.of(origin1, origin2, origin3)));
+        aimElements = new ArrayList<>(List.of(aim1, aim2, aim3));
         mapElementSimilarities = new HashMap<>();
         mapFamilyDifferences = new HashMap<>();
         nextSteps = new NextStepHint();
@@ -157,8 +160,8 @@ public class PedagogicalSoftwareServiceNextStepTest {
 
 
         //B- More in aim than in origin
-        mapFamilySimilarities.put("family1", new ArrayList<PedagogicalSoftwareBlockDTO>(Arrays.asList(origin1)));
-        aimElements = new ArrayList<PedagogicalSoftwareBlockDTO>(Arrays.asList(aim1, aim2));
+        mapFamilySimilarities.put("family1", new ArrayList<>(List.of(origin1)));
+        aimElements = new ArrayList<>(List.of(aim1, aim2));
         mapElementSimilarities = new HashMap<>();
         mapFamilyDifferences = new HashMap<>();
         nextSteps = new NextStepHint();
@@ -172,14 +175,14 @@ public class PedagogicalSoftwareServiceNextStepTest {
 
         //C- More in aim with 2 family difference distance
         mapFamilySimilarities.clear();
-        mapFamilySimilarities.put("family1", new ArrayList<PedagogicalSoftwareBlockDTO>(Arrays.asList(origin1, origin2)));
-        aimElements = new ArrayList<PedagogicalSoftwareBlockDTO>(Arrays.asList(aim1, aim2, aim3));
+        mapFamilySimilarities.put("family1", new ArrayList<>(List.of(origin1, origin2)));
+        aimElements = new ArrayList<>(List.of(aim1, aim2, aim3));
         mapElementSimilarities = new HashMap<>();
         mapFamilyDifferences = new HashMap<>();
         nextSteps = new NextStepHint();
 
-        mapFamilyDifferences.put("family3", new ArrayList<>(Arrays.asList(origin3)));
-        mapFamilyDifferences.put("family4", new ArrayList<>(Arrays.asList(origin4)));
+        mapFamilyDifferences.put("family3", new ArrayList<>(List.of(origin3)));
+        mapFamilyDifferences.put("family4", new ArrayList<>(List.of(origin4)));
         distanceCalculationService.artieElementDistanceCalculation(mapFamilySimilarities, mapFamilyDifferences, mapElementSimilarities, aimElements, 0, nextSteps);
 
         assertEquals(1, nextSteps.getAddBlocks().size());
@@ -189,13 +192,13 @@ public class PedagogicalSoftwareServiceNextStepTest {
 
         //D- Difference in origin and aim with 2 family difference distance
         mapFamilySimilarities.clear();
-        mapFamilySimilarities.put("family1", new ArrayList<PedagogicalSoftwareBlockDTO>(Arrays.asList(origin1, origin2, origin4)));
-        aimElements = new ArrayList<PedagogicalSoftwareBlockDTO>(Arrays.asList(aim1, aim2, aim5));
+        mapFamilySimilarities.put("family1", new ArrayList<>(List.of(origin1, origin2, origin4)));
+        aimElements = new ArrayList<>(List.of(aim1, aim2, aim5));
         mapElementSimilarities = new HashMap<>();
         mapFamilyDifferences = new HashMap<>();
         nextSteps = new NextStepHint();
 
-        mapFamilyDifferences.put("family3", new ArrayList<>(Arrays.asList(origin3, aim3)));
+        mapFamilyDifferences.put("family3", new ArrayList<>(List.of(origin3, aim3)));
         distanceCalculationService.artieElementDistanceCalculation(mapFamilySimilarities, mapFamilyDifferences, mapElementSimilarities, aimElements, 0, nextSteps);
 
         assertEquals(1, nextSteps.getAddBlocks().size());
@@ -206,8 +209,8 @@ public class PedagogicalSoftwareServiceNextStepTest {
 
         //E- Repeated element in origin but not in aim
         mapFamilySimilarities.clear();
-        mapFamilySimilarities.put("family1", new ArrayList<PedagogicalSoftwareBlockDTO>(Arrays.asList(origin1, origin1, origin2)));
-        aimElements = new ArrayList<PedagogicalSoftwareBlockDTO>(Arrays.asList(aim1, aim2, aim5));
+        mapFamilySimilarities.put("family1", new ArrayList<>(List.of(origin1, origin1, origin2)));
+        aimElements = new ArrayList<>(List.of(aim1, aim2, aim5));
         mapElementSimilarities = new HashMap<>();
         mapFamilyDifferences = new HashMap<>();
         nextSteps = new NextStepHint();
@@ -225,8 +228,8 @@ public class PedagogicalSoftwareServiceNextStepTest {
         PedagogicalSoftwareBlockDTO origin1bis2 = new PedagogicalSoftwareBlockDTO(new PedagogicalSoftwareBlock("","element1", "family1", null, null, null, null, null),3);
 
         mapFamilySimilarities.clear();
-        mapFamilySimilarities.put("family1", new ArrayList<PedagogicalSoftwareBlockDTO>(Arrays.asList(origin1bis, origin1bis2, origin2)));
-        aimElements = new ArrayList<PedagogicalSoftwareBlockDTO>(Arrays.asList(aim1, aim2, aim5));
+        mapFamilySimilarities.put("family1", new ArrayList<>(List.of(origin1bis, origin1bis2, origin2)));
+        aimElements = new ArrayList<>(List.of(aim1, aim2, aim5));
         mapElementSimilarities = new HashMap<>();
         mapFamilyDifferences = new HashMap<>();
         nextSteps = new NextStepHint();
@@ -245,8 +248,8 @@ public class PedagogicalSoftwareServiceNextStepTest {
         PedagogicalSoftwareBlockDTO aim1bis3 = new PedagogicalSoftwareBlockDTO(new PedagogicalSoftwareBlock("","element1", "family1", null, null, null, null, null),2);
 
         mapFamilySimilarities.clear();
-        mapFamilySimilarities.put("family1", new ArrayList<PedagogicalSoftwareBlockDTO>(Arrays.asList(origin1bis, origin1bis2, aim1bis3, origin2)));
-        aimElements = new ArrayList<PedagogicalSoftwareBlockDTO>(Arrays.asList(aim1, aim2, aim5));
+        mapFamilySimilarities.put("family1", new ArrayList<>(List.of(origin1bis, origin1bis2, aim1bis3, origin2)));
+        aimElements = new ArrayList<>(List.of(aim1, aim2, aim5));
         mapElementSimilarities = new HashMap<>();
         mapFamilyDifferences = new HashMap<>();
         nextSteps = new NextStepHint();
@@ -266,8 +269,8 @@ public class PedagogicalSoftwareServiceNextStepTest {
         aim2 = new PedagogicalSoftwareBlockDTO(new PedagogicalSoftwareBlock("","element2", "family1", null, null, null, null, null),2);
 
         mapFamilySimilarities.clear();
-        mapFamilySimilarities.put("family1", new ArrayList<PedagogicalSoftwareBlockDTO>(Arrays.asList(origin1, origin2, origin3)));
-        aimElements = new ArrayList<PedagogicalSoftwareBlockDTO>(Arrays.asList(aim1bis, aim1bis2, aim2));
+        mapFamilySimilarities.put("family1", new ArrayList<>(List.of(origin1, origin2, origin3)));
+        aimElements = new ArrayList<>(List.of(aim1bis, aim1bis2, aim2));
         mapElementSimilarities = new HashMap<>();
         mapFamilyDifferences = new HashMap<>();
         nextSteps = new NextStepHint();
@@ -287,8 +290,8 @@ public class PedagogicalSoftwareServiceNextStepTest {
         aim2 = new PedagogicalSoftwareBlockDTO(new PedagogicalSoftwareBlock("","element2", "family1", null, null, null, null, null),3);
 
         mapFamilySimilarities.clear();
-        mapFamilySimilarities.put("family1", new ArrayList<PedagogicalSoftwareBlockDTO>(Arrays.asList(origin1, origin2, origin3)));
-        aimElements = new ArrayList<PedagogicalSoftwareBlockDTO>(Arrays.asList(aim1bis, aim1bis2, aim1bis3, aim2));
+        mapFamilySimilarities.put("family1", new ArrayList<>(List.of(origin1, origin2, origin3)));
+        aimElements = new ArrayList<>(List.of(aim1bis, aim1bis2, aim1bis3, aim2));
         mapElementSimilarities = new HashMap<>();
         mapFamilyDifferences = new HashMap<>();
         nextSteps = new NextStepHint();
@@ -344,20 +347,20 @@ public class PedagogicalSoftwareServiceNextStepTest {
 
         originFieldInput1 = new PedagogicalSoftwareField("STR", "a");
         originFieldInput2 = new PedagogicalSoftwareField("NUM", "30");
-        originInput1 = new PedagogicalSoftwareInput("Name", "Name", new ArrayList<PedagogicalSoftwareField>(Arrays.asList(originFieldInput1)));
-        originInput2 = new PedagogicalSoftwareInput("Steps", "Steps", new ArrayList<PedagogicalSoftwareField>(Arrays.asList(originFieldInput2)));
-        origin1.setInputs(new ArrayList<PedagogicalSoftwareInput>(Arrays.asList(originInput1, originInput2)));
+        originInput1 = new PedagogicalSoftwareInput("Name", "Name", new ArrayList<>(List.of(originFieldInput1)));
+        originInput2 = new PedagogicalSoftwareInput("Steps", "Steps", new ArrayList<>(List.of(originFieldInput2)));
+        origin1.setInputs(new ArrayList<>(List.of(originInput1, originInput2)));
 
 
         aimFieldInput1 = new PedagogicalSoftwareField("STR", "a");
         aimFieldInput2 = new PedagogicalSoftwareField("NUM", "30");
-        aimInput1 = new PedagogicalSoftwareInput("Name", "Name", new ArrayList<PedagogicalSoftwareField>(Arrays.asList(aimFieldInput1)));
-        aimInput2 = new PedagogicalSoftwareInput("Steps", "Name", new ArrayList<PedagogicalSoftwareField>(Arrays.asList(aimFieldInput2)));
-        aim1.setInputs(new ArrayList<PedagogicalSoftwareInput>(Arrays.asList(aimInput1, aimInput2)));
+        aimInput1 = new PedagogicalSoftwareInput("Name", "Name", new ArrayList<>(List.of(aimFieldInput1)));
+        aimInput2 = new PedagogicalSoftwareInput("Steps", "Name", new ArrayList<>(List.of(aimFieldInput2)));
+        aim1.setInputs(new ArrayList<>(List.of(aimInput1, aimInput2)));
 
 
-        mapElementSimilarities.put("element1", new ArrayList<>(Arrays.asList(origin1)));
-        aimElements = new ArrayList<>(Arrays.asList(aim1));
+        mapElementSimilarities.put("element1", new ArrayList<>(List.of(origin1)));
+        aimElements = new ArrayList<>(List.of(aim1));
 
         distanceCalculationService.artieInputDistanceCalculation(mapElementSimilarities, mapFamilyDifferences, aimElements, 0, nextSteps);
 
@@ -372,31 +375,31 @@ public class PedagogicalSoftwareServiceNextStepTest {
 
         originFieldInput1 = new PedagogicalSoftwareField("STR", "b");
         originFieldInput2 = new PedagogicalSoftwareField("NUM", "30");
-        originInput1 = new PedagogicalSoftwareInput("Name", "Name", new ArrayList<PedagogicalSoftwareField>(Arrays.asList(originFieldInput1)));
-        originInput2 = new PedagogicalSoftwareInput("Steps", "Name", new ArrayList<PedagogicalSoftwareField>(Arrays.asList(originFieldInput2)));
-        origin1.setInputs(new ArrayList<PedagogicalSoftwareInput>(Arrays.asList(originInput1, originInput2)));
+        originInput1 = new PedagogicalSoftwareInput("Name", "Name", new ArrayList<>(List.of(originFieldInput1)));
+        originInput2 = new PedagogicalSoftwareInput("Steps", "Name", new ArrayList<>(List.of(originFieldInput2)));
+        origin1.setInputs(new ArrayList<>(List.of(originInput1, originInput2)));
 
 
         aimFieldInput1 = new PedagogicalSoftwareField("STR", "a");
         aimFieldInput2 = new PedagogicalSoftwareField("NUM", "30");
-        aimInput1 = new PedagogicalSoftwareInput("Name", "Name", new ArrayList<PedagogicalSoftwareField>(Arrays.asList(aimFieldInput1)));
-        aimInput2 = new PedagogicalSoftwareInput("Steps", "Name", new ArrayList<PedagogicalSoftwareField>(Arrays.asList(aimFieldInput2)));
-        aim1.setInputs(new ArrayList<PedagogicalSoftwareInput>(Arrays.asList(aimInput1, aimInput2)));
+        aimInput1 = new PedagogicalSoftwareInput("Name", "Name", new ArrayList<>(List.of(aimFieldInput1)));
+        aimInput2 = new PedagogicalSoftwareInput("Steps", "Name", new ArrayList<>(List.of(aimFieldInput2)));
+        aim1.setInputs(new ArrayList<>(List.of(aimInput1, aimInput2)));
 
         diffFieldInput1 = new PedagogicalSoftwareField("STR", "a");
         diffFieldInput2 = new PedagogicalSoftwareField("NUM", "20");
-        diffInput1 = new PedagogicalSoftwareInput("Name", "Name", new ArrayList<PedagogicalSoftwareField>(Arrays.asList(diffFieldInput1)));
-        diffInput2 = new PedagogicalSoftwareInput("Steps", "Steps", new ArrayList<PedagogicalSoftwareField>(Arrays.asList(diffFieldInput2)));
-        diff1.setInputs(new ArrayList<PedagogicalSoftwareInput>(Arrays.asList(diffInput1)));
-        diff2.setInputs(new ArrayList<PedagogicalSoftwareInput>(Arrays.asList(diffInput2)));
+        diffInput1 = new PedagogicalSoftwareInput("Name", "Name", new ArrayList<>(List.of(diffFieldInput1)));
+        diffInput2 = new PedagogicalSoftwareInput("Steps", "Steps", new ArrayList<>(List.of(diffFieldInput2)));
+        diff1.setInputs(new ArrayList<>(List.of(diffInput1)));
+        diff2.setInputs(new ArrayList<>(List.of(diffInput2)));
 
 
         mapElementSimilarities.clear();
-        mapElementSimilarities.put("element1", new ArrayList<PedagogicalSoftwareBlockDTO>(Arrays.asList(origin1)));
-        mapFamilyDifferences.put("family2", new ArrayList<>(Arrays.asList(diff1)));
-        mapFamilyDifferences.put("family3", new ArrayList<>(Arrays.asList(diff2)));
+        mapElementSimilarities.put("element1", new ArrayList<>(List.of(origin1)));
+        mapFamilyDifferences.put("family2", new ArrayList<>(List.of(diff1)));
+        mapFamilyDifferences.put("family3", new ArrayList<>(List.of(diff2)));
 
-        aimElements = new ArrayList<PedagogicalSoftwareBlockDTO>(Arrays.asList(aim1));
+        aimElements = new ArrayList<>(List.of(aim1));
 
         distanceCalculationService.artieInputDistanceCalculation(mapElementSimilarities, mapFamilyDifferences, aimElements, 0, nextSteps);
 
@@ -415,30 +418,30 @@ public class PedagogicalSoftwareServiceNextStepTest {
 
         originFieldInput1 = new PedagogicalSoftwareField("STR", "a");
         originFieldInput2 = new PedagogicalSoftwareField("NUM", "30");
-        originInput1 = new PedagogicalSoftwareInput("Name", "Name", new ArrayList<PedagogicalSoftwareField>(Arrays.asList(originFieldInput1)));
-        originInput2 = new PedagogicalSoftwareInput("Steps", "Steps", new ArrayList<PedagogicalSoftwareField>(Arrays.asList(originFieldInput2)));
-        origin1.setInputs(new ArrayList<PedagogicalSoftwareInput>(Arrays.asList(originInput1, originInput2)));
+        originInput1 = new PedagogicalSoftwareInput("Name", "Name", new ArrayList<>(List.of(originFieldInput1)));
+        originInput2 = new PedagogicalSoftwareInput("Steps", "Steps", new ArrayList<>(List.of(originFieldInput2)));
+        origin1.setInputs(new ArrayList<>(List.of(originInput1, originInput2)));
 
 
         aimFieldInput1 = new PedagogicalSoftwareField("STR", "a");
         aimFieldInput2 = new PedagogicalSoftwareField("NUM", "40");
-        aimInput1 = new PedagogicalSoftwareInput("Name", "Name", new ArrayList<PedagogicalSoftwareField>(Arrays.asList(aimFieldInput1)));
-        aimInput2 = new PedagogicalSoftwareInput("Steps", "Steps", new ArrayList<PedagogicalSoftwareField>(Arrays.asList(aimFieldInput2)));
-        aim1.setInputs(new ArrayList<PedagogicalSoftwareInput>(Arrays.asList(aimInput1, aimInput2)));
+        aimInput1 = new PedagogicalSoftwareInput("Name", "Name", new ArrayList<>(List.of(aimFieldInput1)));
+        aimInput2 = new PedagogicalSoftwareInput("Steps", "Steps", new ArrayList<>(List.of(aimFieldInput2)));
+        aim1.setInputs(new ArrayList<>(List.of(aimInput1, aimInput2)));
 
         mapElementSimilarities.clear();
-        mapElementSimilarities.put("element1", new ArrayList<PedagogicalSoftwareBlockDTO>(Arrays.asList(origin1)));
-        aimElements = new ArrayList<PedagogicalSoftwareBlockDTO>(Arrays.asList(aim1));
+        mapElementSimilarities.put("element1", new ArrayList<>(List.of(origin1)));
+        aimElements = new ArrayList<>(List.of(aim1));
 
         diffFieldInput1 = new PedagogicalSoftwareField("STR", "string");
         diffFieldInput2 = new PedagogicalSoftwareField("NUM", "15");
-        diffInput1 = new PedagogicalSoftwareInput("Name", "Name", new ArrayList<PedagogicalSoftwareField>(Arrays.asList(diffFieldInput1)));
-        diffInput2 = new PedagogicalSoftwareInput("Steps", "Steps", new ArrayList<PedagogicalSoftwareField>(Arrays.asList(diffFieldInput2)));
-        diff1.setInputs(new ArrayList<PedagogicalSoftwareInput>(Arrays.asList(diffInput1)));
-        diff2.setInputs(new ArrayList<PedagogicalSoftwareInput>(Arrays.asList(diffInput2)));
+        diffInput1 = new PedagogicalSoftwareInput("Name", "Name", new ArrayList<>(List.of(diffFieldInput1)));
+        diffInput2 = new PedagogicalSoftwareInput("Steps", "Steps", new ArrayList<>(List.of(diffFieldInput2)));
+        diff1.setInputs(new ArrayList<>(List.of(diffInput1)));
+        diff2.setInputs(new ArrayList<>(List.of(diffInput2)));
 
-        mapFamilyDifferences.put("family2", new ArrayList<>(Arrays.asList(diff1)));
-        mapFamilyDifferences.put("family3", new ArrayList<>(Arrays.asList(diff2)));
+        mapFamilyDifferences.put("family2", new ArrayList<>(List.of(diff1)));
+        mapFamilyDifferences.put("family3", new ArrayList<>(List.of(diff2)));
 
         distanceCalculationService.artieInputDistanceCalculation(mapElementSimilarities, mapFamilyDifferences, aimElements, 0, nextSteps);
 
@@ -457,30 +460,30 @@ public class PedagogicalSoftwareServiceNextStepTest {
 
         originFieldInput1 = new PedagogicalSoftwareField("STR", "b");
         originFieldInput2 = new PedagogicalSoftwareField("NUM", "30");
-        originInput1 = new PedagogicalSoftwareInput("Name", "Name", new ArrayList<PedagogicalSoftwareField>(Arrays.asList(originFieldInput1)));
-        originInput2 = new PedagogicalSoftwareInput("Steps", "Steps", new ArrayList<PedagogicalSoftwareField>(Arrays.asList(originFieldInput2)));
-        origin1.setInputs(new ArrayList<PedagogicalSoftwareInput>(Arrays.asList(originInput1, originInput2)));
+        originInput1 = new PedagogicalSoftwareInput("Name", "Name", new ArrayList<>(List.of(originFieldInput1)));
+        originInput2 = new PedagogicalSoftwareInput("Steps", "Steps", new ArrayList<>(List.of(originFieldInput2)));
+        origin1.setInputs(new ArrayList<>(List.of(originInput1, originInput2)));
 
 
         aimFieldInput1 = new PedagogicalSoftwareField("STR", "a");
         aimFieldInput2 = new PedagogicalSoftwareField("NUM", "40");
-        aimInput1 = new PedagogicalSoftwareInput("Name", "Name", new ArrayList<PedagogicalSoftwareField>(Arrays.asList(aimFieldInput1)));
-        aimInput2 = new PedagogicalSoftwareInput("Steps", "Steps", new ArrayList<PedagogicalSoftwareField>(Arrays.asList(aimFieldInput2)));
-        aim1.setInputs(new ArrayList<PedagogicalSoftwareInput>(Arrays.asList(aimInput1, aimInput2)));
+        aimInput1 = new PedagogicalSoftwareInput("Name", "Name", new ArrayList<>(List.of(aimFieldInput1)));
+        aimInput2 = new PedagogicalSoftwareInput("Steps", "Steps", new ArrayList<>(List.of(aimFieldInput2)));
+        aim1.setInputs(new ArrayList<>(List.of(aimInput1, aimInput2)));
 
         mapElementSimilarities.clear();
-        mapElementSimilarities.put("element1", new ArrayList<PedagogicalSoftwareBlockDTO>(Arrays.asList(origin1)));
-        aimElements = new ArrayList<PedagogicalSoftwareBlockDTO>(Arrays.asList(aim1));
+        mapElementSimilarities.put("element1", new ArrayList<>(List.of(origin1)));
+        aimElements = new ArrayList<>(List.of(aim1));
 
         diffFieldInput1 = new PedagogicalSoftwareField("STR", "string");
         diffFieldInput2 = new PedagogicalSoftwareField("NUM", "90");
-        diffInput1 = new PedagogicalSoftwareInput("Name", "Name", new ArrayList<PedagogicalSoftwareField>(Arrays.asList(diffFieldInput1)));
-        diffInput2 = new PedagogicalSoftwareInput("Steps", "Steps", new ArrayList<PedagogicalSoftwareField>(Arrays.asList(diffFieldInput2)));
-        diff1.setInputs(new ArrayList<PedagogicalSoftwareInput>(Arrays.asList(diffInput1)));
-        diff2.setInputs(new ArrayList<PedagogicalSoftwareInput>(Arrays.asList(diffInput2)));
+        diffInput1 = new PedagogicalSoftwareInput("Name", "Name", new ArrayList<>(List.of(diffFieldInput1)));
+        diffInput2 = new PedagogicalSoftwareInput("Steps", "Steps", new ArrayList<>(List.of(diffFieldInput2)));
+        diff1.setInputs(new ArrayList<>(List.of(diffInput1)));
+        diff2.setInputs(new ArrayList<>(List.of(diffInput2)));
 
-        mapFamilyDifferences.put("family2", new ArrayList<>(Arrays.asList(diff1)));
-        mapFamilyDifferences.put("family3", new ArrayList<>(Arrays.asList(diff2)));
+        mapFamilyDifferences.put("family2", new ArrayList<>(List.of(diff1)));
+        mapFamilyDifferences.put("family3", new ArrayList<>(List.of(diff2)));
 
         distanceCalculationService.artieInputDistanceCalculation(mapElementSimilarities, mapFamilyDifferences, aimElements, 0, nextSteps);
 
